// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabSwitcher expect to render first tab 1`] = `
<Tab
  tabId={0}
>
  First Tab
</Tab>
`;

exports[`TabSwitcher expect to render second tab 1`] = `
<Tab
  tabId={1}
>
  Second Tab
</Tab>
`;
